Initial MovieService using gRPC.